hphp/test/zend/good/zend/isset_002.php
<?php

var_dump(isset($a, ${$b}, $$c, $$$$d, $e[$f->g]->d));

?>