hphp/test/zend/bad/ext-spl/fixedarray_004.php
<?php

$a = new SplFixedArray(10);

try {
	$a[] = 1;
} catch (Exception $e) {
	var_dump($e->getMessage());
}

?>
===DONE===